= Changelog

== v2022.7.0 (unrelased)

=== Architectural decision records

=== Deprecation warning

=== Breaking changes

=== Dependency update

=== Bug fixes

=== Improvements

=== New features

- https://github.com/eclipse-sirius/sirius-components/issues/1212[#1212] [form] Add styling support on Textfield Widget in View DSL
- https://github.com/eclipse-sirius/sirius-components/issues/1233[#1233] [form] Handle styling of the View DSL widgets
- https://github.com/eclipse-sirius/sirius-components/issues/1236[#1236] [form] Handle conditional styling of the View DSL widgets 

== v2022.5.0

=== Architectural decision records

- [ADR-50] Add support for multiple selection entries in the details view
- [ADR-51] Add support for form descriptions in the View DSL
- [ADR-52] Add support for EditingContext actions
- [ADR-53] Add support for form descriptions in the view converter
- [ADR-54] Add the support of custom anchors on the frontend side
- [ADR-55] Stop considering the source and target anchors as routing points anymore
- [ADR-56] Add support for a form descriptions editor
- [ADR-57] Add the ability to minimize the content of a site
- [ADR-58] Compute dynamically the connector tools
- [ADR-59] Add support for styling of the widgets and charts in the API, DSL, converter and compatibility layer

=== Deprecation warning

=== Breaking changes

- https://github.com/eclipse-sirius/sirius-components/issues/1088[#1088] [core] Change the type of `IRepresentationDescription#id` from UUID to String.
This will allow us, when we will receive an operation to perform with a given representation description identifier, to determine if this operation should be handled by the Sirius Desktop compatibility layer, the View support or by a programmatic API
- https://github.com/eclipse-sirius/sirius-components/issues/1138[#1138] [workbench] The APIs for the `Panels` and `Site` components have been modified to support closing/opening the panels.