@@ -1,0 +1,32 @@
+/*******************************************************************************
+ * Copyright (c) 2022 Obeo.
+ * This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License v2.0
+ * which accompanies this distribution, and is available at
+ * https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
+ *
+ * Contributors:
+ *     Obeo - initial API and implementation
+ *******************************************************************************/
+package org.eclipse.sirius.components.collaborative.formdescriptioneditors;
+
+import java.util.List;
+
+import org.eclipse.sirius.components.core.api.IImagePathService;
+import org.springframework.stereotype.Service;
+
+/**
+ * Register the form description editor images folder.
+ *
+ * @author arichard
+ */
+@Service
+public class FormDescriptionEditorImagePathService implements IImagePathService {
+    @Override
+    public List<String> getPaths() {
+        return List.of("/formdescriptioneditor-images/"); //$NON-NLS-1$
+    }
+
+}
