@@ -132,11 +132,11 @@ public class MultiSelectDescriptionItemProvider extends WidgetDescriptionItemPro
     /**
      * This returns MultiSelectDescription.gif. <!-- begin-user-doc --> <!-- end-user-doc -->
      *
-     * @generated
+     * @generated NOT
      */
     @Override
     public Object getImage(Object object) {
-        return this.overlayImage(object, this.getResourceLocator().getImage("full/obj16/MultiSelectDescription")); //$NON-NLS-1$
+        return this.overlayImage(object, this.getResourceLocator().getImage("full/obj16/MultiSelectDescription.svg")); //$NON-NLS-1$
     }
 
     /**
