@@ -132,11 +132,11 @@ public class SelectDescriptionItemProvider extends WidgetDescriptionItemProvider
     /**
      * This returns SelectDescription.gif. <!-- begin-user-doc --> <!-- end-user-doc -->
      *
-     * @generated
+     * @generated NOT
      */
     @Override
     public Object getImage(Object object) {
-        return this.overlayImage(object, this.getResourceLocator().getImage("full/obj16/SelectDescription")); //$NON-NLS-1$
+        return this.overlayImage(object, this.getResourceLocator().getImage("full/obj16/SelectDescription.svg")); //$NON-NLS-1$
     }
 
     /**
