@@ -104,11 +104,11 @@ public class TextAreaDescriptionItemProvider extends WidgetDescriptionItemProvid
     /**
      * This returns TextAreaDescription.gif. <!-- begin-user-doc --> <!-- end-user-doc -->
      *
-     * @generated
+     * @generated NOT
      */
     @Override
     public Object getImage(Object object) {
-        return this.overlayImage(object, this.getResourceLocator().getImage("full/obj16/TextAreaDescription")); //$NON-NLS-1$
+        return this.overlayImage(object, this.getResourceLocator().getImage("full/obj16/TextareaDescription.svg")); //$NON-NLS-1$
     }
 
     /**
